cmake_minimum_required(VERSION 3.16)
project(mfl VERSION 1.0.0 DESCRIPTION "maths functions library")

message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++2a")

FILE(GLOB SOURCES src/*.cxx)
# FILE(GLOB HEADERS include/${PROJECT_NAME}/*.hh)
include_directories(include)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
#set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/${PROJECT_NAME}/${PROJECT_NAME}.hxx)
#target_include_directories(${PROJECT_NAME} PRIVATE include/)
target_link_libraries(${PROJECT_NAME})
configure_file(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
install(TARGETS ${PROJECT_NAME})
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
#install(FILES ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION ${CMAKE_INSTALL_PREFIX})

#set(EXE main)
#add_executable(${EXE} main.cxx)
#add_dependencies(${EXE} ${PROJECT_NAME})
#target_link_libraries(${EXE} ${PROJECT_NAME})
#install(TARGETS ${EXE} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

if (MFL_BUILD_TESTS)
  FILE(GLOB TESTS tests/*.cc)
  foreach(test ${TESTS})
    get_filename_component(test_exe ${test} NAME_WE)
    add_executable(${test_exe} ${test})
    add_dependencies(${test_exe} ${PROJECT_NAME})
    target_link_libraries(${test_exe} ${PROJECT_NAME})
    add_test(NAME ${test_exe} COMMAND ${test_exe})
  endforeach()
endif()

if (MFL_BUILD_EXAMPLES)
  FILE(GLOB EXAMPLES examples/*.cc)
  foreach(example ${EXAMPLES})
    get_filename_component(example_exe ${example} NAME_WE)
    add_executable(${example_exe} ${example})
    add_dependencies(${example_exe} ${PROJECT_NAME})
    target_link_libraries(${example_exe} ${PROJECT_NAME})
    # install(TARGETS ${example_exe} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
  endforeach()
endif()
